objects/acciunt__c.object
<CustomObject>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_amount__c</fullName>
        <label>Fee amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_detail__c</fullName>
        <label>Student detail</label>
        <referenceTo>Student_detail__c</referenceTo>
        <relationshipLabel>college accounts</relationshipLabel>
        <relationshipName>college_accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>paid_date__c</fullName>
        <label>paid date</label>
        <type>Date</type>
    </fields>
    <label>college account</label>
    <nameField>
        <label>acciunt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>college accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>